Fix #313 - fix pop up cut off issue

--- a/management/server/webui/src/main/webapp/css/style.css
+++ b/management/server/webui/src/main/webapp/css/style.css
@@ -36,8 +36,8 @@ input[type=checkbox] {
 
 .b-personal-space {
 	position: absolute;
-	top: 10px;
-	right: 16px;
+	top: 27px;
+	right: 30px;
 	z-index: 10;
 }
 
